--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
     </script>
     <script>
       ((window.gitter = {}).chat = {}).options = {
-        room: 'etheroox/lobby',
+        room: 'senoexchange/lobby',
         activationElement: false
       };
     </script>
